# chaitya

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
agents/: communication_agent.yaml  file_agent.yaml  intake_agent.yaml  supervisor.yaml
config/: models.yaml.example  space_types.yaml
docs/: README.md  architecture.md
src/chaitya_app/: __init__.py
src/chaitya_app/adapters/: __init__.py
src/chaitya_app/adapters/agent/: __init__.py
src/chaitya_app/adapters/memory/: __init__.py
src/chaitya_app/adapters/memory/backends/: __init__.py
src/chaitya_app/adapters/model/: __init__.py
src/chaitya_app/adapters/model/providers/: __init__.py
src/chaitya_app/adapters/skills/: __init__.py
src/chaitya_app/adapters/space/: __init__.py
src/chaitya_app/adapters/tools/: __init__.py
src/chaitya_app/adapters/unigate_bridge/: __init__.py
