[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaitya-app"
version = "0.1.0a1"
description = "Intelligence layer for Chaitya — spaces, agents, memory, and tools on top of Chaitya Core"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Chaitya Contributors" },
]
keywords = [
    "agent", "ai", "automation", "llm", "microkernel",
    "multi-agent", "orchestration", "spaces",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "chaitya-core>=0.1.0a1",
    "unigate>=0.2.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
ollama = ["ollama>=0.4.0"]
all-providers = [
    "chaitya-app[anthropic]",
    "chaitya-app[openai]",
    "chaitya-app[ollama]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.entry-points."chaitya.adapters"]
space = "chaitya_app.adapters.space"
agent = "chaitya_app.adapters.agent"
model = "chaitya_app.adapters.model"
memory = "chaitya_app.adapters.memory"
tools = "chaitya_app.adapters.tools"
skills = "chaitya_app.adapters.skills"
unigate-bridge = "chaitya_app.adapters.unigate_bridge"

[project.urls]
Homepage = "https://github.com/chaitya-app/chaitya"
Documentation = "https://github.com/chaitya-app/chaitya/tree/main/docs"
Repository = "https://github.com/chaitya-app/chaitya"
Issues = "https://github.com/chaitya-app/chaitya/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/chaitya_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]
